--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "jcrosenthal",
-    "password": "Winter72!",
-    "database": "ocaadb",
-    "host": "ocaa.cxkgeapmyuo9.us-east-1.rds.amazonaws.com",
+    "username": "root",
+    "password": "root",
+    "database": "ocaa",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "jcrosenthal",
-    "password": "Winter72!",
-    "database": "ocaadb",
-    "host": "ocaa.cxkgeapmyuo9.us-east-1.rds.amazonaws.com",
+    "username": "root",
+    "password": "root",
+    "database": "ocaa",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "jcrosenthal",
-    "password": "Winter72!",
-    "database": "ocaadb",
-    "host": "ocaa.cxkgeapmyuo9.us-east-1.rds.amazonaws.com",
+    "username": "root",
+    "password": "root",
+    "database": "ocaa",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
