--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "dependencies": {
-    "mysql2": "^1.6.5",
-    "sequelize": "^5.3.0"
-  },
   "name": "ocaa-api",
   "version": "1.0.0",
-  "description": "Orange County NY A.A. Meetings API",
+  "description": "",
   "main": "index.js",
-  "repository": "https://github.com/JamesRosenthal/ocaa-api.git",
-  "author": "jcrosenthal@gmail.com",
-  "license": "MIT",
-  "private": false
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.6.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://JamesRosenthal@github.com/JamesRosenthal/ocaa-api.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JamesRosenthal/ocaa-api/issues"
+  },
+  "homepage": "https://github.com/JamesRosenthal/ocaa-api#readme"
 }
