POST, Get and relations

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "mysql2": "^1.6.5",
     "sequelize": "^5.6.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.11"
+  },
   "scripts": {
+    "dev": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
