--- a/config/config.json
+++ b/config/config.json
@@ -6,18 +6,11 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-  "test": {
-    "username": "root",
-    "password": "root",
-    "database": "ocaa",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
   "production": {
-    "username": "root",
-    "password": "root",
-    "database": "ocaa",
-    "host": "127.0.0.1",
+    "username": "jcrosenthal",
+    "password": "MMQ(dBykPXusfa8RLnmB",
+    "database": "ocaameetings",
+    "host": "ocaa-meetings.cxkgeapmyuo9.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
