--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "pg": "^7.10.0",
     "sequelize": "^5.6.1"
   },
   "devDependencies": {
@@ -15,6 +17,7 @@
   },
   "scripts": {
     "dev": "nodemon ./bin/www",
+    "prod": "NODE_ENV=production; nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
