--- a/config/config.json
+++ b/config/config.json
@@ -10,7 +10,10 @@
       "min": 0,
       "idle": 20000,
       "acquire": 20000
-    }
+    },
+    "dialectOptions": {
+      "ssl": "Amazon RDS"
+    },
   },
   "production": {
     "username": "jcrosenthal",
@@ -23,6 +26,9 @@
       "min": 0,
       "idle": 20000,
       "acquire": 20000
-    }
+    },
+    "dialectOptions": {
+      "ssl": "Amazon RDS"
+    },
   }
 }
