--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,19 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
-    "database": "ocaa",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "jcrosenthal",
+    "password": "rKGb3Q^tXwMRZkWHdFUT",
+    "database": "ocaa_micro",
+    "host": "ocaa-micro.cxkgeapmyuo9.us-east-1.rds.amazonaws.com",
+    "dialect": "mysql",
+    "pool": {
+      "max": 5,
+      "min": 0,
+      "idle": 20000,
+      "acquire": 20000
+    },
+    "dialectOptions": {
+      "ssl": "Amazon RDS"
+    }
   },
   "production": {
     "username": "jcrosenthal",
