--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "nodemon": "^1.18.11"
   },
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "dev": "nodemon ./bin/www",
+    "dev": "NODE_ENV=development; nodemon ./bin/www",
     "prod": "NODE_ENV=production; nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
