--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,7 @@
     "dialect": "mysql"
   },
   "production": {
+    "use_env_variable": true,
     "username": "jcrosenthal",
     "password": "rKGb3Q^tXwMRZkWHdFUT",
     "database": "ocaa_micro",
