--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "sequelize": "^5.6.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.19.4"
   },
   "scripts": {
     "dev": "NODE_ENV=development && nodemon ./bin/www",
-    "prod": "NODE_ENV=production && node index.js",
+    "prod": "export NODE_ENV=production; nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
