--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "pg": "^7.10.0",
     "sequelize": "^5.6.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.18.11"
   },
   "scripts": {
-    "dev": "NODE_ENV=development && nodemon ./bin/www",
-    "prod": "export NODE_ENV=production; nodemon ./bin/www",
+    "start": "nodemon ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "prod": "NODE_ENV=production; nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
