--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.10.0",
-    "sequelize": "^5.6.1"
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
   },
   "scripts": {
     "dev": "NODE_ENV=development && nodemon ./bin/www",
-    "prod": "export NODE_ENV=production; nodemon ./bin/www",
+    "prod": "NODE_ENV=production && nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
