--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development && nodemon ./bin/www",
-    "prod": "NODE_ENV=production && nodemon ./bin/www",
+    "prod": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
