--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "scripts": {
     "dev": "NODE_ENV=development && nodemon ./bin/www",
     "prod": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy-production": "pm2 deploy ecosystem.config.js production",
+    "reload-production": "pm2 deploy ecosystem.config.js production exec 'pm2 reload app'"
   },
   "repository": {
     "type": "git",
